# energy-saving-vibration-control-for-dual-flexible-manipulator

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  sample.env  setup.cfg
archive/: tra.py
archive/src/: PSO_beki.py  tra.py
data/: exp9_8.csv  sumarry.numbers
data/dst/: output.csv  pso_param.csv
data/exp/output/: 0_output_pso_gauss_n2_te0.9_se90.csv
data/exp/param/: 0_param_pso_gauss_n2_te0.9_se90.csv
data/exp/plot/: 0_plot_pso_gauss_n2_te0.9_se90.html
data/p_ident_exp/trq/: plot.html
data/p_ident_exp/trq/output/: 0_output.csv  1_output.csv  2_output.csv  3_output.csv  4_output.csv  5_output.csv  6_output.csv  7_output.csv  8_output.csv  9_output.csv
data/p_ident_exp/w1/: plot.html
data/p_ident_exp/w2/: plot.html
data/plot/: graph.html
outputs/: cycloid_data.csv
src/: batch.sh  cond.py  condition.py  data.py  eval.py  main.py  nsga2.py  pso.py  pso_gauss.py  pso_power.py  rk4.py  run.py  simple_run.py  traj.py  utils.py
src/config/: config_of_calc.py  nsga2.yaml  nsga2_f1_r10k_gauss6_p6_te09_se90.yaml  nsga2_f1_r10k_power_p6_te09_se90.yaml  nsga2_f2_r10k_gauss6_p6_te09_se90.yaml  nsga2_f2_r10k_power_p6_te09_se90.yaml  param_of_equation.py  sample.yaml
src/models/: eval.py  nsga2.py  pso.py  rk4.py  traj.py
src/p_ident_exp/: README.md  trq.py  w.py
src/plot/: abe_exp_data.py  exp_plot.py  exp_w.py  experiments.py  p_ident_exp.py  p_ident_exp_trq.py  p_ident_exp_w.py  pareto.py  sim_plot.py  yosi.py
src/utils/: config.py  data.py  line_notify.py
tests/: test_kosen_research2.py
(+334 files in other folders)
