[tool.poetry]
name = "kosen_research2"
version = "0.1.0"
description = ""
authors = ["Ryota Kusunoki <ryotakusunoki@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
scipy = "^1.5.2"
bokeh = "^2.1.1"
pandas = "^1.1.0"
cython = "^0.29.21"
tqdm = "^4.48.2"
numba = "^0.51.1"
joblib = "^0.16.0"
Platypus-Opt = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"
line-profiler = {git = "https://github.com/rkern/line_profiler.git"}

[tool.black]
line-length = 99

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

